SERVER-15111 Treat corruption of final journal section as an expected event